--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="/dist/main.css">
     <style>
         html, body {
+            min-height: 100%;
             height: 100%;
             margin: 0;
             padding: 0;
