--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
             height: 100%;
             margin: 0;
             padding: 0;
+            display: flex;
+            flex-direction: column;
+        }
+        body {
+            flex: 1 0 auto;
         }
     </style>
 </head>
